# tfmicro-playground

./: .gitignore  README.md  pyproject.toml  tflite_micro_flow.ipynb
.ipynb_checkpoints/: tflite_micro_flow-checkpoint.ipynb
models/: model.cc  model.tflite  model_no_quant.tflite
models/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model/variables/: variables.data-00000-of-00001  variables.index
